force-app/main/default/objects/Visa_Insurance__c/fields/Commission_Manual__c.field-meta.xml
<CustomField>
    <fullName>Commission_Manual__c</fullName>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>