force-app/main/default/objects/Visa_Insurance__c/fields/Consultant_Owner__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visa_Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>