force-app/main/default/objects/Visa_Insurance__c/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Courier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Visa__c.RecordType.Id</field>
            <operation>equals</operation>
            <value>0120K000000ygrZ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Visa__c</referenceTo>
    <relationshipLabel>Visa &amp; Insurance (Courier)</relationshipLabel>
    <relationshipName>Visa_Insurance1</relationshipName>
    <type>Lookup</type>
</CustomField>