force-app/main/default/objects/Visa_Insurance__c/fields/Courier_Fees__c.field-meta.xml
<CustomField>
    <fullName>Courier_Fees__c</fullName>
    <formula>Quantity_Courier__c *  Courier__r.Courier_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Courier Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>