force-app/main/default/objects/Visa_Insurance__c/fields/Cover_Type__c.field-meta.xml
<CustomField>
    <fullName>Cover_Type__c</fullName>
    <label>Cover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprehensive</fullName>
            </value>
            <value>
                <fullName>Essentials</fullName>
            </value>
            <value>
                <fullName>Basics</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>