force-app/main/default/objects/Visa_Insurance__c/fields/Insurance_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Sale_Price__c</fullName>
    <label>Insurance Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>