force-app/main/default/objects/Visa_Insurance__c/fields/orders__c.field-meta.xml
<CustomField>
    <fullName>orders__c</fullName>
    <label>Order</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Visa &amp; Insurance</relationshipLabel>
    <relationshipName>Visa_Insurance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>