force-app/main/default/objects/Visa_Insurance__c/fields/Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passenger</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>customer__c.order__c</field>
            <operation>equals</operation>
            <valueField>$Source.orders__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>customer__c</referenceTo>
    <relationshipLabel>Visa &amp; Insurance</relationshipLabel>
    <relationshipName>Visa_Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>