force-app/main/default/objects/Visa_Insurance__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <label>Passenger Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>