force-app/main/default/objects/Visa_Insurance__c/fields/Payment_via_External_Portal_insurance__c.field-meta.xml
<CustomField>
    <fullName>Payment_via_External_Portal_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment via External Portal?</label>
    <type>Checkbox</type>
</CustomField>