force-app/main/default/objects/Visa_Insurance__c/fields/Payment_via_external_visa__c.field-meta.xml
<CustomField>
    <fullName>Payment_via_external_visa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked where payment NOT via TAD</description>
    <label>Payment via External Portal?</label>
    <type>Checkbox</type>
</CustomField>