force-app/main/default/objects/Visa_Insurance__c/fields/Quantity_Courier__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Courier__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>