force-app/main/default/objects/Visa_Insurance__c/fields/Total_external__c.field-meta.xml
<CustomField>
    <fullName>Total_external__c</fullName>
    <label>Visa Total (External)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>