force-app/main/default/objects/Visa_Insurance__c/fields/Visa_Type__c.field-meta.xml
<CustomField>
    <fullName>Visa_Type__c</fullName>
    <label>Visa Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>China Single Entry</fullName>
            </value>
            <value>
                <fullName>China Double Entry</fullName>
            </value>
            <value>
                <fullName>One way Courier</fullName>
            </value>
            <value>
                <fullName>Return Courier</fullName>
            </value>
            <value>
                <fullName>Transsiberia</fullName>
            </value>
            <value>
                <fullName>Russia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>